@@ -14,6 +14,12 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Fix broken magic map spell for "small" maps.
+Nicolas Weeger 2010-11-06
+
+Integrate some lore from the wiki to the messages file.
+Nicolas Weeger 2010-11-06
+
 Fix possibility of arithmetic overflow in the function buf_overflow().
 Arvid Norlander 2010-10-25
 
